# api/handlers/add_product.go
@@ -18,18 +18,11 @@ import (
 // @Param products body []domain.Product true "Список продуктов для добавления"
 // @Success 200 "Продукты успешно добавлены"
 // @Failure 400 "Ошибка в запросе или при добавлении продуктов"
-// @Failure 401 "Пользователь не авторизован"
 // @Router /products [post]
-// @Security ApiKeyAuth
 func AddProductsHandler(storageService service.Storage) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		storageCtx := storagecontext.New(r)
 		storageCtx.SetLogTag("[add-product]")
-
-		if !storageCtx.IsAuthorized() {
-			w.WriteHeader(http.StatusUnauthorized)
-			return
-		}
 
 		var products []domain.Product
 		if err := goathttp.ReadRequestJson(r, &products); err != nil {
